# krg-notes

./: .gitignore  CMakeLists.txt  ai  ai.cc  ai.doxygen  animation.cc  animation.doxygen  asset-pak-system.md  audio.cc  behavior-tree.cc  conversation-system.cc  conversation-system.md  entity.cc  entity.doxygen  footsteps.cc  fps-movement.cc  fsm-enum.cc  fsm-global.cc  game-gui-random-movement.cs  game-gui.md  gui-layout-forms.cc  level-scripting-icarus.md  level-scripting.cc  level-scripting.doxygen  level-scripting.json  light.md  make-pseudo-lang.py  music.cc  readme.md  sequence-programming.md
